perf: ⚡️ use flex

--- a/packages/Chat/src/enterBox.module.scss
+++ b/packages/Chat/src/enterBox.module.scss
@@ -16,7 +16,7 @@
     word-break: break-all;
     font-size: 13px;
     line-height: 17px;
-    -webkit-appearance: none;
+    appearance: none;
   }
   .enterBoxMenu {
     text-align: right;
