--- a/packages/Chat/src/chatList.module.scss
+++ b/packages/Chat/src/chatList.module.scss
@@ -4,8 +4,8 @@
 
 .wrapper {
   position: relative;
-  width: 525px;
-  height: 382px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   /* Prevent native touch events on Windows */
   touch-action: none;
