--- a/packages/Chat/src/index.module.scss
+++ b/packages/Chat/src/index.module.scss
@@ -1,15 +1,20 @@
 .chatPage {
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   position: relative;
   background: #fff;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
   .taleBox {
-    height: calc(100% - 140px);
+    height: 100%;
     min-height: 100px;
     overflow: hidden;
   }
   .toolBox {
     height: 140px;
+    flex: 1 0 auto;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04);
     position: relative;
     .quickList {
