--- a/packages/Chat/src/quickList.module.scss
+++ b/packages/Chat/src/quickList.module.scss
@@ -10,6 +10,10 @@
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
   transition: all 2s;
   box-sizing: border-box;
+  position: absolute;
+  // top: 0;
+  transform: translateY(-105%);
+  background: #fff;
   .quickItem {
     padding: 0.2rem 0;
     display: flex;
