--- a/packages/ChatIndex/src/index.module.scss
+++ b/packages/ChatIndex/src/index.module.scss
@@ -1,4 +1,3 @@
-
 .ChatPage {
   margin: 0 auto;
   background: #fff;
@@ -23,10 +22,13 @@
   .main {
     display: flex;
     height: calc(100% - 60px);
+    .chatBox {
+      flex: 1 0 auto;
+    }
 
     .rightBox {
       box-shadow: 0 -3px 3px 0 rgba(0, 0, 0, 0.1);
-      width: 45%;
+      width: 30%;
       position: relative;
 
       .switch {
@@ -45,4 +47,3 @@
     }
   }
 }
-
