--- a/packages/ChatIndex/src/index.module.scss
+++ b/packages/ChatIndex/src/index.module.scss
@@ -4,44 +4,51 @@
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
   position: relative;
   display: flex;
-  .winBar {
-    // position: absolute;
-    // transform: translateX(-100%);
-  }
-  .header {
-    background-color: #409eff;
+  .winBox {
+    width: 100%;
+    height: 100%;
     display: flex;
-    margin: 0 auto;
-    padding-left: 12px;
-    align-items: center;
-    height: 60px;
-    position: relative;
-    color: #fff;
-  }
+    flex-direction: column;
 
-  .main {
-    display: flex;
-    height: calc(100% - 60px);
-    .chatBox {
+    .header {
+      background-color: #409eff;
+      display: flex;
+      margin: 0 auto;
+      padding-left: 12px;
+      align-items: center;
+      height: 60px;
+      position: relative;
+      color: #fff;
       flex: 1 0 auto;
+      width: 100%;
+      box-sizing: border-box;
     }
 
-    .rightBox {
-      box-shadow: 0 -3px 3px 0 rgba(0, 0, 0, 0.1);
-      width: 30%;
-      position: relative;
+    .main {
+      display: flex;
+      height: 100%;
+      width: 100%;
+      .chatBox {
+        flex: 1 0 auto;
+      }
 
-      .switch {
-        position: absolute;
-        left: -1.2rem;
-        top: 20%;
-        background: rgba(204, 204, 204, 0.5);
-        padding: 0.3rem 0 0.3rem 0.1rem;
-        border-radius: 100% 0 0 100%;
-        color: #fff;
-        cursor: pointer;
-        &:hover {
-          background: #409eff;
+      .rightBox {
+        box-shadow: 0 -3px 3px 0 rgba(0, 0, 0, 0.1);
+        width: 30%;
+        position: relative;
+
+        .switch {
+          position: absolute;
+          left: -1.2rem;
+          top: 20%;
+          background: rgba(204, 204, 204, 0.5);
+          padding: 0.3rem 0 0.3rem 0.1rem;
+          border-radius: 100% 0 0 100%;
+          color: #fff;
+          cursor: pointer;
+          &:hover {
+            background: #409eff;
+          }
         }
       }
     }
