--- a/packages/ChatIndex/src/windowBar.module.scss
+++ b/packages/ChatIndex/src/windowBar.module.scss
@@ -1,11 +1,20 @@
 .windowBar {
   background: #fff;
   height: 100%;
-  min-width: 150px;
+  width: 100%;
+  min-width: 50px;
   overflow: hidden;
-  display: flex;
-  border-right: 1px solid #dcdfe6;
+  flex: 1 0 auto;
   position: relative;
+  &::after {
+    content: "";
+    height: 100%;
+    width: 1px;
+    background: #dcdfe6;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
   .toolBarBox {
     $barSize: 60px;
     width: $barSize;
